Fixing section overflow on style guide

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -66,14 +66,20 @@ footer ul li {
 }
 
 section.content {
-  overflow-y: visible;
+  overflow: visible;
   padding: 62px 32px;
+  height: 100%;
+}
+
+section.content-guide {
+  overflow: visible;
+  padding: 0 !important;
   height: 100%;
 }
 
 section.guide-section {
   padding:112px 32px;
-  height: 100vh;
+  height: 100%;
   overflow: visible;
 }
 
